# fx-mistral

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
examples/: chat_extract.rs  main.rs  ocr_to_md.rs
src/: files.rs  lib.rs  ocr.rs
src/chat/: chat_request.rs  messages.rs  mod.rs
